# rs_cub_diff_lib

./: .gitignore  Cargo.toml  README.md
cub_diff/: Cargo.toml
cub_diff/src/: change.rs  lib.rs
cub_diff_lib/: Cargo.toml  README.md
cub_diff_lib/src/: abstract_diff.rs  context_diff.rs  diff.rs  lines.rs  patch.rs  preamble.rs  text_diff.rs  unified_diff.rs
cub_diff_lib/src/git_binary_diff/: git_base85.rs  mod.rs
cub_diff_lib_gtk/: Cargo.toml
cub_diff_lib_gtk/src/: diff.rs  icons.rs  lib.rs
src/: abstract_diff.rs  context_diff.rs  diff.rs  diff_stats.rs  icons.rs  lib.rs  lines.rs  patch.rs  preamble.rs  text_diff.rs  unified_diff.rs
src/git_binary_diff/: git_base85.rs  git_delta.rs  mod.rs
test_gui_gtk/: Cargo.toml
test_gui_gtk/src/: main.rs
