[package]
name = "cub_diff_lib"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

[dependencies]
crypto-hash = "0.3.3"
lcs = "0.2.0"
regex = "1"
inflate = "0.4.4"
lazy_static = "0.2.8"

#pw_pathux = { url = "git@github.com:pwil3058/rs_pw_pathux.git"}
pw_pathux = { path = "../rs_pw_pathux.git"}
