[package]
name = "test_gui_gtk"
version = "0.1.0"
authors = ["Peter Williams <pwil3058@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cub_diff_lib_gtk = { path = "../cub_diff_lib_gtk" }
pw_gix = { git = "https://github.com/pwil3058/rs_pw_gix.git" }
